Changed global font to Times New Roman and fixed emoji spacing

--- a/style_common.css
+++ b/style_common.css
@@ -3,7 +3,7 @@ strong, h1, h2, h3 {
 }
 
 *  {
-    font-family: "Lato", sans-serif;
+    font-family: "Times New Roman", Times, serif;
     font-optical-sizing: auto;
     font-weight: 450;
     font-style: normal;
